// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ArticleHeadline - Lite Site CTA with toggle disabled should not be displayed on canonical 1`] = `
@media (max-width: 14.9375rem) {
  .emotion-0 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-0 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-0 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-0 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width: 63rem) and (max-width: 79.9375rem) {
  .emotion-0 {
    margin-left: 16.666666666666668%;
  }
}

@media (min-width: 80rem) {
  .emotion-0 {
    margin-left: 33.333333333333336%;
  }
}

@supports (display: grid) {
  .emotion-0 {
    display: block;
    width: initial;
    margin: 0;
  }

  @media (max-width: 14.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 15rem) and (max-width: 24.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 25rem) and (max-width: 37.4375rem) {
    .emotion-0 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 63rem) and (max-width: 79.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-start: 2;
    }
  }

  @media (min-width: 80rem) {
    .emotion-0 {
      grid-template-columns: repeat(12, 1fr);
      grid-column-end: span 12;
      grid-column-start: 5;
    }
  }
}

.emotion-2 {
  font-size: 1.75rem;
  line-height: 2rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 700;
  color: #141414;
  display: block;
  margin: 0;
  padding: 2rem 0;
  overflow-wrap: anywhere;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-2 {
    font-size: 2rem;
    line-height: 2.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    font-size: 2.75rem;
    line-height: 3rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    padding: 2.5rem 0;
  }
}

.emotion-2:focus {
  outline: none;
}

<div>
  <div
    class="emotion-0 emotion-1"
    dir="ltr"
  >
    <h1
      class="article-heading emotion-2 emotion-3"
      id="content"
      tabindex="-1"
    >
      'Urukundo rukomeye n'impuhwe ni byo byamurangaga' – Antoine Karidinali Kambanda yibuka Papa
    </h1>
  </div>
</div>
`;

exports[`ArticleHeadline - Lite Site CTA with toggle enabled should be displayed on canonical 1`] = `
@media (max-width: 14.9375rem) {
  .emotion-0 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-0 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-0 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-0 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width: 63rem) and (max-width: 79.9375rem) {
  .emotion-0 {
    margin-left: 16.666666666666668%;
  }
}

@media (min-width: 80rem) {
  .emotion-0 {
    margin-left: 33.333333333333336%;
  }
}

@supports (display: grid) {
  .emotion-0 {
    display: block;
    width: initial;
    margin: 0;
  }

  @media (max-width: 14.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 15rem) and (max-width: 24.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 25rem) and (max-width: 37.4375rem) {
    .emotion-0 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 63rem) and (max-width: 79.9375rem) {
    .emotion-0 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-start: 2;
    }
  }

  @media (min-width: 80rem) {
    .emotion-0 {
      grid-template-columns: repeat(12, 1fr);
      grid-column-end: span 12;
      grid-column-start: 5;
    }
  }
}

.emotion-2 {
  font-size: 1.75rem;
  line-height: 2rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 700;
  color: #141414;
  display: block;
  margin: 0;
  padding: 2rem 0;
  overflow-wrap: anywhere;
  padding-bottom: 0.25rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-2 {
    font-size: 2rem;
    line-height: 2.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    font-size: 2.75rem;
    line-height: 3rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    padding: 2.5rem 0;
  }
}

.emotion-2:focus {
  outline: none;
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    padding-bottom: 0.75rem;
  }
}

.emotion-4 {
  margin-bottom: 1.25rem;
}

@media (min-width: 37.5rem) {
  .emotion-4 {
    margin-bottom: 1.75rem;
  }
}

.emotion-5 {
  color: #141414;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0.8125rem 0 0.8125rem;
  -webkit-margin-start: 0.5rem;
  margin-inline-start: 0.5rem;
}

.emotion-5:visited {
  color: #6E6E73;
}

.emotion-5:focus,
.emotion-5:hover {
  color: #B80000;
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media screen and (forced-colors: active) {
  .emotion-5 {
    fill: linkText;
  }

  .emotion-5:visited {
    fill: visitedText;
  }

  .emotion-5:active {
    fill: activeText;
  }
}

@media (min-width: 25rem) {
  .emotion-5 {
    -webkit-margin-start: 1rem;
    margin-inline-start: 1rem;
  }
}

@media (min-width: 63rem) {
  .emotion-5 {
    -webkit-margin-start: 0;
    margin-inline-start: 0;
  }
}

.emotion-6 {
  color: #141414;
  font-size: 0.875rem;
  line-height: 1.125rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 700;
  color: inherit;
  border-bottom: 0.0625rem solid #141414;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-6 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-6 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

a:visited .emotion-6 {
  color: #6E6E73;
  border-bottom: 0.0625rem solid #6E6E73;
}

a:focus .emotion-6,
a:hover .emotion-6 {
  color: #B80000;
  border-bottom: 0.125rem solid #B80000;
}

.emotion-7 {
  -webkit-margin-start: 0.5rem;
  margin-inline-start: 0.5rem;
  width: 0.875rem;
  height: 0.875rem;
  vertical-align: middle;
  fill: currentColor;
}

<div>
  <div
    class="emotion-0 emotion-1"
    dir="ltr"
  >
    <h1
      class="article-heading emotion-2 emotion-3"
      id="content"
      tabindex="-1"
    >
      'Urukundo rukomeye n'impuhwe ni byo byamurangaga' – Antoine Karidinali Kambanda yibuka Papa
    </h1>
  </div>
  <div
    class="emotion-4"
    data-e2e="article-lite-site-link"
  >
    <a
      class="emotion-5"
      href="/news/articles/c0g992jmmkko.lite"
    >
      <span
        class="emotion-6"
      >
        Inyandiko gusa
      </span>
      <svg
        aria-hidden="true"
        class="emotion-7"
        focusable="false"
        height="12"
        viewBox="0 0 32 32"
        width="12"
      >
        <path
          d="M21.6 14.3L5.5 31h6.4l14.6-15L11.9 1H5.5l16.1 16.7v-3.4z"
        />
      </svg>
    </a>
  </div>
</div>
`;
